--- a/.gitattributes
+++ b/.gitattributes
@@ -14,10 +14,5 @@
 *.jpg   binary
 
 # 3rd party libraries
-ui/web/js/leaflet*.js               linguist-vendored
-ui/web/js/Leaflet*.js               linguist-vendored
-ui/web/js/Control.Geocoder.js       linguist-vendored
-ui/web/css/leaflet*.css             linguist-vendored
-ui/web/css/Leaflet*.css             linguist-vendored
-ui/web/css/Control.Geocoder.css     linguist-vendored
-
+ui/web/js/deps/*.js                 linguist-vendored
+ui/web/css/deps/*.css               linguist-vendored
