update ci: clang-tidy, macOS, buildcache

--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -5,21 +5,87 @@ on:
     branches: [ master ]
   pull_request:
     branches: [ master ]
+  release:
+    types:
+      - published
 
 jobs:
   build:
     runs-on: windows-latest
 
     strategy:
+      fail-fast: false
       matrix:
         mode: [Debug, Release]
 
+    env:
+      CXX: cl.exe
+      CC: cl.exe
+      BUILDCACHE_COMPRESS: true
+      BUILDCACHE_DIR: ${{ github.workspace }}/.buildcache
+      BUILDCACHE_ACCURACY: SLOPPY
+      BUILDCACHE_LUA_PATH: ${{ github.workspace }}/tools
+
     steps:
       - uses: actions/checkout@v2
-      - uses: microsoft/setup-msbuild@v1.0.0
+      - uses: seanmiddleditch/gha-setup-ninja@master
 
+      # ==== CACHE ====
+      - name: buildcache Cache
+        uses: actions/cache@v1.1.2
+        with:
+          path: ${{ github.workspace }}/.buildcache
+          key: buildcache-windows-${{ matrix.mode }}-${{ hashFiles('.pkg') }}-${{ hashFiles('**/*.h') }}-${{ hashFiles('**/*.cc') }}
+          restore-keys: |
+            buildcache-windows-${{ matrix.mode }}-${{ hashFiles('.pkg') }}-${{ hashFiles('**/*.h') }}
+            buildcache-windows-${{ matrix.mode }}-${{ hashFiles('.pkg') }}-
+            buildcache-windows-${{ matrix.mode }}-
+
+      - name: Dependencies Cache
+        uses: actions/cache@v1.1.2
+        with:
+          path: ${{ github.workspace }}/deps
+          key: deps-${{ hashFiles('.pkg') }}
+          restore-keys: deps-
+
+      # ==== BUILD ====
       - name: Build
         run: |
           $env:BOOST_ROOT = $env:BOOST_ROOT_1_72_0
-          cmake -G "Visual Studio 16 2019" -A x64 -S . -B build
-          cmake --build build --config ${{ matrix.mode }} --target ppr-preprocess ppr-backend footrouting ppr-benchmark
+          $devShell = &"${env:ProgramFiles(x86)}\Microsoft Visual Studio\Installer\vswhere.exe" -latest -find **\Microsoft.VisualStudio.DevShell.dll
+          $installPath = &"${env:ProgramFiles(x86)}\Microsoft Visual Studio\Installer\vswhere.exe" -latest -property installationpath
+          Import-Module $devShell
+          Enter-VsDevShell -VsInstallPath $installPath -SkipAutomaticLocation -DevCmdArguments "-arch=amd64"
+          cmake -GNinja -S . -B build -DCMAKE_BUILD_TYPE=${{ matrix.mode }}
+          .\build\bin\buildcache.exe -z
+          cmake --build build --target ppr-preprocess ppr-backend footrouting ppr-benchmark
+          .\build\bin\buildcache.exe -s
+
+      # ==== DISTRIBUTION ====
+      - name: Create Distribution
+        if: matrix.mode == 'Release'
+        run: >
+          7z a ppr-windows.zip
+          .\build\ppr-preprocess.exe
+          .\build\ppr-backend.exe
+          .\build\footrouting.exe
+          .\ui\web
+
+      - name: Upload Distribution
+        if: matrix.mode == 'Release'
+        uses: actions/upload-artifact@v1
+        with:
+          name: ppr-windows
+          path: ppr-windows.zip
+
+      # ==== RELEASE ====
+      - name: Upload Release
+        if: github.event.action == 'published' && matrix.mode == 'Release'
+        uses: actions/upload-release-asset@v1.0.2
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ github.event.release.upload_url }}
+          asset_path: ./ppr-windows.zip
+          asset_name: ppr-windows.zip
+          asset_content_type: application/zip
