silence clang-tidy deserialization warning #2

--- a/.clang-tidy.in
+++ b/.clang-tidy.in
@@ -52,7 +52,8 @@ Checks: "*,\
 -cert-dcl21-cpp,\
 -modernize-use-trailing-return-type,\
 -fuchsia-default-arguments-calls,\
--fuchsia-default-arguments-declarations"
+-fuchsia-default-arguments-declarations,\
+-clang-analyzer-core.NullDereference"
 WarningsAsErrors: '*'
 HeaderFilterRegex: '^${RELATIVE_SOURCE_DIR}(include/)'
 AnalyzeTemporaryDtors: false
