--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -57,9 +57,9 @@ jobs:
           Import-Module $devShell
           Enter-VsDevShell -VsInstallPath $installPath -SkipAutomaticLocation -DevCmdArguments "-arch=amd64"
           cmake -GNinja -S . -B build -DCMAKE_BUILD_TYPE=${{ matrix.mode }}
-          .\build\bin\buildcache.exe -z
+          .\build\buildcache\bin\buildcache.exe -z
           cmake --build build --target ppr-preprocess ppr-backend footrouting ppr-benchmark
-          .\build\bin\buildcache.exe -s
+          .\build\buildcache\bin\buildcache.exe -s
 
       # ==== DISTRIBUTION ====
       - name: Create Distribution
