--- a/.github/workflows/unix.yml
+++ b/.github/workflows/unix.yml
@@ -29,39 +29,47 @@ jobs:
       fail-fast: false
       matrix:
         config:
-          - name: macOS Release
+          - name: MacOS Release
             cxx: clang++
             cc: clang
             mode: Release
             cxxflags: -stdlib=libc++
             os: macos-latest
             artifact: macos
-          - name: GCC 9 Release
-            cxx: g++-9
-            cc: gcc-9
+          - name: GCC 10 Release
+            cxx: g++-10
+            cc: gcc-10
             mode: Release
-            os: ubuntu-latest
+            os: ubuntu-20.04
             artifact: linux
-          - name: GCC 9 Debug
-            cxx: g++-9
-            cc: gcc-9
+          - name: GCC 10 Debug
+            cxx: g++-10
+            cc: gcc-10
             mode: Debug
-            os: ubuntu-latest
-          - name: Clang 9 Release
-            cxx: clang++-9
-            cc: clang-9
+            os: ubuntu-20.04
+          - name: Clang 11 Release
+            cxx: clang++-11
+            cc: clang-11
             mode: Release
             cxxflags: -stdlib=libc++
             ldflags: -lc++abi
-            os: ubuntu-latest
+            os: ubuntu-20.04
           - name: Clang Tidy
-            cxx: clang++-9
-            cc: clang-9
+            cxx: clang++-11
+            cc: clang-11
             mode: Debug
             cxxflags: -stdlib=libc++
             ldflags: -lc++abi
             lint: true
-            os: ubuntu-latest
+            os: ubuntu-20.04
+          - key: Clang 11 Sanitizer
+            cxx: clang++-11
+            cc: clang-11
+            mode: Release
+            cflags: -fsanitize=address,undefined -fno-omit-frame-pointer
+            cxxflags: -fsanitize=address,undefined -fno-omit-frame-pointer -stdlib=libc++
+            ldflags: -lc++abi
+            os: ubuntu-20.04
     env:
       BOOST_ROOT: /usr/local/share/boost/1.72.0
       BUILDCACHE_COMPRESS: true
@@ -74,22 +82,38 @@ jobs:
       - uses: seanmiddleditch/gha-setup-ninja@master
 
       # ==== INSTALL ====
-      - name: Install LLVM
-        if: matrix.config.os != 'macos-latest' && matrix.config.cc == 'clang-9'
+      - name: Upgrade Packages
+        if: matrix.config.os != 'macos-latest'
         env:
           DEBIAN_FRONTEND: noninteractive
-        run: sudo apt-get install -y --no-install-recommends libc++-9-dev libc++abi-9-dev clang-tidy-9
+        run: sudo apt-get update
+
+      - name: Install LLVM
+        if: matrix.config.os != 'macos-latest' && matrix.config.cc == 'clang-11'
+        env:
+          DEBIAN_FRONTEND: noninteractive
+        run: |
+          wget https://apt.llvm.org/llvm.sh
+          chmod +x llvm.sh
+          sudo ./llvm.sh 11
+          rm llvm.sh
+          sudo apt-get install -y --no-install-recommends libc++-11-dev libc++abi-11-dev clang-tidy-11
+      - name: Install Valgrind
+        if: matrix.config.mode == 'Debug' && matrix.config.cc == 'gcc-10'
+        env:
+          DEBIAN_FRONTEND: noninteractive
+        run: sudo apt-get install -y --no-install-recommends valgrind
 
       # ==== CACHING ====
       - name: buildcache Cache
         uses: actions/cache@v1.1.2
         with:
           path: ${{ github.workspace }}/.buildcache
-          key: buildcache-${{ matrix.config.os }}-${{ matrix.config.cc }}-${{ matrix.config.mode }}-${{ matrix.config.lint }}-${{ hashFiles('.pkg') }}-${{ hashFiles('**/*.h') }}-${{ hashFiles('**/*.cc') }}
+          key: buildcache-${{ matrix.config.os }}-${{ matrix.config.cc }}-${{ matrix.config.mode }}-${{ contains(matrix.config.cxxflags, 'sanitize') }}-${{ matrix.config.lint }}-${{ hashFiles('.pkg') }}-${{ hashFiles('**/*.h') }}-${{ hashFiles('**/*.cc') }}
           restore-keys: |
-            buildcache-${{ matrix.config.os }}-${{ matrix.config.cc }}-${{ matrix.config.mode }}-${{ matrix.config.lint }}-${{ hashFiles('.pkg') }}-${{ hashFiles('**/*.h') }}-
-            buildcache-${{ matrix.config.os }}-${{ matrix.config.cc }}-${{ matrix.config.mode }}-${{ matrix.config.lint }}-${{ hashFiles('.pkg') }}-
-            buildcache-${{ matrix.config.os }}-${{ matrix.config.cc }}-${{ matrix.config.mode }}-${{ matrix.config.lint }}-
+            buildcache-${{ matrix.config.os }}-${{ matrix.config.cc }}-${{ matrix.config.mode }}-${{ contains(matrix.config.cxxflags, 'sanitize') }}-${{ matrix.config.lint }}-${{ hashFiles('.pkg') }}-${{ hashFiles('**/*.h') }}-
+            buildcache-${{ matrix.config.os }}-${{ matrix.config.cc }}-${{ matrix.config.mode }}-${{ contains(matrix.config.cxxflags, 'sanitize') }}-${{ matrix.config.lint }}-${{ hashFiles('.pkg') }}-
+            buildcache-${{ matrix.config.os }}-${{ matrix.config.cc }}-${{ matrix.config.mode }}-${{ contains(matrix.config.cxxflags, 'sanitize') }}-${{ matrix.config.lint }}-
 
       - name: Dependencies Cache
         uses: actions/cache@v1.1.2
@@ -97,44 +121,6 @@ jobs:
           path: ${{ github.workspace }}/deps
           key: deps-${{ hashFiles('.pkg') }}
           restore-keys: deps-
-
-      - name: libc++ Boost Cache
-        uses: actions/cache@v1
-        id: libcxxboostcache
-        if: contains(matrix.config.cxxflags, 'libc++')
-        with:
-          path: boost_1_72_0
-          key: boost_1_72_0-${{ matrix.config.os }}-${{ matrix.config.cxx }}
-
-      # ==== BOOST FOR LIBCXX ====
-      - name: Boost for libc++
-        if: contains(matrix.config.cxxflags, 'libc++') && steps.libcxxboostcache.outputs.cache-hit != 'true'
-        run: |
-          echo "using clang : 9 : ${{ matrix.config.cxx }} ;" > $HOME/user-config.jam
-          wget https://dl.bintray.com/boostorg/release/1.72.0/source/boost_1_72_0.tar.bz2
-          tar xf boost_1_72_0.tar.bz2
-          cd boost_1_72_0
-          ./bootstrap.sh
-          ./b2 -j6 \
-            link=static threading=multi variant=release \
-            toolset=clang-9 cxxflags="${{ matrix.config.cxxflags }}" \
-            --with-system \
-            --with-filesystem \
-            --with-iostreams \
-            --with-program_options \
-            --with-thread \
-            --with-date_time \
-            --with-regex \
-            --with-serialization \
-            -s NO_BZIP2=1
-
-      - name: Set BOOST_ROOT for GCC 9
-        if: matrix.config.cxx == 'g++-9'
-        run: echo "BOOST_ROOT=$BOOST_ROOT_1_72_0" >> $GITHUB_ENV
-
-      - name: Set BOOST_ROOT
-        if: contains(matrix.config.cxxflags, 'libc++')
-        run: echo "BOOST_ROOT=`pwd`/boost_1_72_0" >> $GITHUB_ENV
 
       # ==== BUILD ====
       - name: CMake
