only push docker images for master branch

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -3,9 +3,10 @@ name: Docker
 on:
   push:
     branches:
-      - '*'
+      - 'master'
     tags:
       - '*'
+  pull_request:
   release:
     types:
       - published
