--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,9 +31,9 @@ if(APPLE)
   set(CMAKE_CXX_ARCHIVE_FINISH "<CMAKE_RANLIB> -no_warning_for_no_symbols -c <TARGET>")
 endif()
 
-if(NOT CMAKE_BUILD_TYPE AND NOT CMAKE_CONFIGURATION_TYPES)
-  set(CMAKE_BUILD_TYPE "RelWithDebInfo" CACHE STRING "Build type" FORCE)
-endif()
+if (NOT CMAKE_BUILD_TYPE AND NOT CMAKE_CONFIGURATION_TYPES)
+  set(CMAKE_BUILD_TYPE "Release" CACHE STRING "Build type" FORCE)
+endif ()
 message(STATUS "Build type: ${CMAKE_BUILD_TYPE}")
 
 
@@ -42,6 +42,20 @@ message(STATUS "Build type: ${CMAKE_BUILD_TYPE}")
 ################################
 find_package(Threads)
 
+if (MSVC)
+  # PDB debug information is not supported by buildcache.
+  # Store debug info in the object files.
+  option(PPR_DEBUG_SYMBOLS "generate debug symbols (debug builds)" ON)
+  if (PPR_DEBUG_SYMBOLS)
+    set(PPR_MSVC_DEBUG_FLAGS "/Z7")
+  else ()
+    set(PPR_MSVC_DEBUG_FLAGS "")
+  endif ()
+  string(REPLACE "/Zi" "${PPR_MSVC_DEBUG_FLAGS}" CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG}")
+  string(REPLACE "/Zi" "${PPR_MSVC_DEBUG_FLAGS}" CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG}")
+  string(REPLACE "/Zi" "${PPR_MSVC_DEBUG_FLAGS}" CMAKE_C_FLAGS_RELWITHDEBINFO "${CMAKE_C_FLAGS_RELWITHDEBINFO}")
+  string(REPLACE "/Zi" "${PPR_MSVC_DEBUG_FLAGS}" CMAKE_CXX_FLAGS_RELWITHDEBINFO "${CMAKE_CXX_FLAGS_RELWITHDEBINFO}")
+endif ()
 include(cmake/buildcache.cmake)
 include(cmake/pkg.cmake)
 
