--- a/.clang-tidy.in
+++ b/.clang-tidy.in
@@ -58,7 +58,8 @@ Checks: "*,\
 -fuchsia-default-arguments-calls,\
 -fuchsia-default-arguments-declarations,\
 -misc-no-recursion,\
--llvm-qualified-auto"
+-llvm-qualified-auto,\
+-readability-qualified-auto"
 WarningsAsErrors: '*'
 HeaderFilterRegex: '^${RELATIVE_SOURCE_DIR}(include/)'
 AnalyzeTemporaryDtors: false
