buildcache: use direct mode

--- a/.github/workflows/unix.yml
+++ b/.github/workflows/unix.yml
@@ -82,6 +82,7 @@ jobs:
             os: ubuntu-20.04
     env:
       BUILDCACHE_COMPRESS: true
+      BUILDCACHE_DIRECT_MODE: true
       BUILDCACHE_ACCURACY: SLOPPY
       BUILDCACHE_LUA_PATH: ${{ github.workspace }}/tools
       BUILDCACHE_DIR: ${{ github.workspace }}/.buildcache
