--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -59,7 +59,9 @@ jobs:
           cmake -GNinja -S . -B build -DCMAKE_BUILD_TYPE=${{ matrix.mode }} -DPPR_DEBUG_SYMBOLS=OFF
           .\build\buildcache\bin\buildcache.exe -z
           cmake --build build --target ppr-preprocess ppr-backend footrouting ppr-benchmark
+          $CompilerExitCode = $LastExitCode
           .\build\buildcache\bin\buildcache.exe -s
+          exit $CompilerExitCode
 
       # ==== DISTRIBUTION ====
       - name: Create Distribution
