--- a/.github/workflows/unix.yml
+++ b/.github/workflows/unix.yml
@@ -43,6 +43,7 @@ jobs:
             cxx: clang++
             cc: clang
             mode: Release
+            mimalloc: off
             cxxflags: -stdlib=libc++
             os: macos-latest
             artifact: macos
@@ -50,17 +51,20 @@ jobs:
             cxx: g++-10
             cc: gcc-10
             mode: Release
+            mimalloc: on
             os: ubuntu-20.04
             artifact: linux
           - name: GCC 10 Debug
             cxx: g++-10
             cc: gcc-10
             mode: Debug
+            mimalloc: on
             os: ubuntu-20.04
           - name: Clang 14 Release
             cxx: clang++-14
             cc: clang-14
             mode: Release
+            mimalloc: on
             cxxflags: -stdlib=libc++
             ldflags: -lc++abi
             os: ubuntu-20.04
@@ -68,6 +72,7 @@ jobs:
             cxx: clang++-14
             cc: clang-14
             mode: Release
+            mimalloc: off
             cxxflags: -stdlib=libc++
             ldflags: -lc++abi
             lint: true
@@ -76,6 +81,7 @@ jobs:
             cxx: clang++-14
             cc: clang-14
             mode: Release
+            mimalloc: off
             cflags: -fsanitize=address,undefined -fno-omit-frame-pointer
             cxxflags: -fsanitize=address,undefined -fno-omit-frame-pointer -stdlib=libc++
             ldflags: -lc++abi
@@ -144,7 +150,8 @@ jobs:
             -DCMAKE_CXX_FLAGS="${{ matrix.config.cxxflags }}" \
             -DCMAKE_EXE_LINKER_FLAGS="${{ matrix.config.ldflags }}" \
             -DCMAKE_BUILD_TYPE=${{ matrix.config.mode }} \
-            -DPPR_LINT=${{ matrix.config.lint }}
+            -DPPR_LINT=${{ matrix.config.lint }} \
+            -DPPR_MIMALLOC=${{ matrix.config.mimalloc }}
 
       - name: Build
         run: |
