--- a/.github/workflows/unix.yml
+++ b/.github/workflows/unix.yml
@@ -113,7 +113,7 @@ jobs:
           chmod +x llvm.sh
           sudo ./llvm.sh 14
           rm llvm.sh
-          sudo apt-get install -y --no-install-recommends libc++-14-dev libc++abi-14-dev clang-tidy-14 libclang-common-14-dev
+          sudo apt-get install -y --no-install-recommends libc++-14-dev libc++abi-14-dev clang-tidy-14 libclang-common-14-dev libclang-rt-14-dev
 
       - name: Install Valgrind
         if: matrix.config.mode == 'Debug' && matrix.config.cc == 'gcc-10'
