--- a/.clang-tidy.in
+++ b/.clang-tidy.in
@@ -71,6 +71,7 @@ Checks: "*,\
 -readability-function-cognitive-complexity,\
 -readability-avoid-const-params-in-decls,\
 -cppcoreguidelines-avoid-const-or-ref-data-members,\
+-cppcoreguidelines-avoid-do-while,\
 -altera-struct-pack-align"
 WarningsAsErrors: '*'
 HeaderFilterRegex: '^${RELATIVE_SOURCE_DIR}(include/)'
