ignore clang-tidy bug

--- a/.clang-tidy.in
+++ b/.clang-tidy.in
@@ -397,3 +397,5 @@ CheckOptions:
     value:           '0'
   - key:             readability-simplify-boolean-expr.ChainedConditionalReturn
     value:           '0'
+  - key:             readability-identifier-naming.TemplateParameterIgnoredRegexp
+    value:           'expr-type'
