ignore clang-tidy bug attempt 2

--- a/.clang-tidy.in
+++ b/.clang-tidy.in
@@ -399,3 +399,9 @@ CheckOptions:
     value:           '0'
   - key:             readability-identifier-naming.TemplateParameterIgnoredRegexp
     value:           'expr-type'
+  - key:             readability-identifier-naming.TypeTemplateParameterIgnoredRegexp
+    value:           'expr-type'
+  - key:             readability-identifier-naming.TemplateTemplateParameterIgnoredRegexp
+    value:           'expr-type'
+  - key:             readability-identifier-naming.ValueTemplateParameterIgnoredRegexp
+    value:           'expr-type'
