--- a/.github/workflows/unix.yml
+++ b/.github/workflows/unix.yml
@@ -97,6 +97,7 @@ jobs:
       BUILDCACHE_LUA_PATH: ${{ github.workspace }}/tools
       BUILDCACHE_DIR: ${{ github.workspace }}/.buildcache
       UBSAN_OPTIONS: halt_on_error=1:abort_on_error=1
+      CLICOLOR_FORCE: 1
     steps:
       - uses: actions/checkout@v3
 
