--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -30,6 +30,7 @@ jobs:
       BUILDCACHE_DIR: ${{ github.workspace }}/.buildcache
       BUILDCACHE_ACCURACY: SLOPPY
       BUILDCACHE_LUA_PATH: ${{ github.workspace }}/tools
+      CLICOLOR_FORCE: 1
 
     steps:
       - uses: actions/checkout@v3
