monitor memory usage

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -75,6 +75,23 @@ endif()
 
 
 ################################
+# ppr-common library
+################################
+file(GLOB_RECURSE ppr-common-files
+  src/common/*.cc
+)
+add_library(ppr-common ${ppr-common-files})
+target_include_directories(ppr-common PUBLIC include)
+target_link_libraries(ppr-common
+  ${CMAKE_THREAD_LIBS_INIT}
+)
+target_compile_features(ppr-common PUBLIC cxx_std_20)
+set_target_properties(ppr-common PROPERTIES CXX_EXTENSIONS OFF)
+target_compile_options(ppr-common PRIVATE ${ppr-compile-flags})
+target_compile_definitions(ppr-common PRIVATE ${ppr-compile-definitions})
+
+
+################################
 # ppr-routing library
 ################################
 file(GLOB_RECURSE ppr-routing-files
@@ -147,6 +164,7 @@ add_executable(ppr-preprocess ${ppr-preprocess-files})
 target_include_directories(ppr-preprocess PUBLIC include)
 target_link_libraries(ppr-preprocess
   ppr-preprocessing
+  ppr-common
   conf
 )
 if (PPR_MIMALLOC)
@@ -174,6 +192,7 @@ target_link_libraries(ppr-backend
   conf
   ppr-routing
   ppr-profiles
+  ppr-common
   rapidjson
 )
 if (PPR_MIMALLOC)
@@ -201,6 +220,7 @@ target_link_libraries(footrouting
   ppr-routing
   ppr-profiles
   ppr-preprocessing
+  ppr-common
   osmium
   protozero
   rapidjson
@@ -228,6 +248,7 @@ target_link_libraries(ppr-benchmark
   ${CMAKE_THREAD_LIBS_INIT}
   conf
   ppr-routing
+  ppr-common
   cpptoml
   osmium
   protozero
