--- a/.clang-tidy.in
+++ b/.clang-tidy.in
@@ -72,7 +72,8 @@ Checks: "*,\
 -readability-avoid-const-params-in-decls,\
 -cppcoreguidelines-avoid-const-or-ref-data-members,\
 -cppcoreguidelines-avoid-do-while,\
--altera-struct-pack-align"
+-altera-struct-pack-align,\
+-android-*"
 WarningsAsErrors: '*'
 HeaderFilterRegex: '^${RELATIVE_SOURCE_DIR}(include/)'
 AnalyzeTemporaryDtors: false
